# skills-trees

./: AGENTS.md  LICENSE  README.md  pyproject.toml
src/skills_trees/: __init__.py  api.py  cli.py  errors.py
src/skills_trees/discovery/: __init__.py  parser.py  scanner.py  validator.py
src/skills_trees/logging/: __init__.py  events.py  recorder.py
src/skills_trees/models/: __init__.py  common.py  discovery.py  skill.py  validation.py
src/skills_trees/utils/: __init__.py  files.py  serialization.py
tests/: test_cli.py  test_discovery.py  test_hierarchy.py  test_validation.py
